Implemented full positional parameter binding for prepared statements with safe literal rendering to block SQL injection. Queries with placeholders now rebind through a sanitized SQL string   before execution, validating parameter indexes and rejecting missing or unsupported values; binary literals are hex-encoded. Added helper parsing logic for placeholder detection, binding,   and literal formatting, plus coverage tests to verify binding, missing-parameter errors, and injection prevention. Connection overload behavior is clarified (non-core overloads remain   unimplemented). Updated JDBC documentation to reflect supported binding and limitations.